<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".configuration.StepOnePickContact">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32sp"
        android:fontFamily="@font/asap_medium"
        android:text="Step 1"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily=""
        android:gravity="center"
        android:text="You will need to choose two persons as maximum that you can contact with in emergency situations"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/person_name_edittext"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1.7"
            android:background="@drawable/btn_rounded_white"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/pick_contact_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".3"
            android:background="@null"
            android:onClick="onPickContactClicked"
            android:src="@drawable/ic_contacts_white_24dp"
            android:foreground="?attr/selectableItemBackground"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/person_phone_edittext"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1.7"
            android:background="@drawable/btn_rounded_white"
            android:drawablePadding="8dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/done_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".3"
            android:background="@null"
            android:onClick="onDoneClicked"
            android:src="@drawable/ic_check_white_48dp"
            android:foreground="?attr/selectableItemBackground"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contacts_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_color_primary"
        android:fontFamily="@font/asap_medium"
        android:onClick="onNextClicked"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>